# webgpu-graph

./: craco.config.js  package-lock.json  package.json
renderer/: Cargo.toml
renderer/src/: lib.rs  shader.wgsl
renderer/tests/: wasm.rs
src/: App.js  index.js
src/pages/Root/: index.js  renderer.worker.js
