[package]
name = "renderer"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
js-sys = "0.3.56"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = {version = "0.2.79", features = ["nightly", "serde-serialize"]}
wasm-bindgen-futures = "0.4.29"

[dependencies.web-sys]
version = "0.3.56"
features = [
  "Document",
  "Gpu",
  "GpuAdapter",
  "GpuBindGroup",
  "GpuBindGroupDescriptor",
  "GpuBindGroupEntry",
  "GpuBindGroupLayout",
  "GpuBindGroupLayoutEntry",
  "GpuBuffer",
  "GpuBufferDescriptor",
  "GpuBufferUsage",
  "GpuCanvasConfiguration",
  "GpuCanvasContext",
  "GpuColorDict",
  "GpuColorTargetState",
  "GpuCommandBuffer",
  "GpuCommandEncoder",
  "GpuComputePassEncoder",
  "GpuComputePipeline",
  "GpuComputePipelineDescriptor",
  "GpuDevice",
  "GpuFragmentState",
  "GpuMapMode",
  "GpuPrimitiveState",
  "GpuPrimitiveTopology",
  "GpuProgrammableStage",
  "GpuQueue",
  "GpuRenderPipeline",
  "GpuRenderPipelineDescriptor",
  "GpuRenderPassColorAttachment",
  "GpuRenderPassDescriptor",
  "GpuRenderPassEncoder",
  "GpuShaderModule",
  "GpuShaderModuleDescriptor",
  "GpuStoreOp",
  "GpuTexture",
  "GpuTextureFormat",
  "GpuTextureView",
  "GpuVertexState",
  "HtmlCanvasElement",
  "Navigator",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"